--- a/.gitignore
+++ b/.gitignore
@@ -6,15 +6,16 @@
 *.ipr
 
 # Java/Gradle
+.gradle/
 services/*/.gradle/
 services/*/build/
 services/*/out/
+build/
 *.jar
 *.war
 *.ear
 *.class
 .gradletasknamecache
-.gradle/
 
 # Spring Boot
 services/*/logs/
@@ -29,9 +30,11 @@ apps/*/.env.local
 apps/*/.env.development.local
 apps/*/.env.test.local
 apps/*/.env.production.local
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
 
 # Python (for future)
 __pycache__/
@@ -42,8 +45,13 @@ __pycache__/
 env/
 venv/
 .venv/
+.pytest_cache/
 pip-log.txt
 pip-delete-this-directory.txt
+*.egg-info/
+dist/
+.mypy_cache/
+.ruff_cache/
 
 # OS
 .DS_Store
@@ -74,6 +82,12 @@ logs/
 .env
 .env.local
 .env.*.local
+services/*/.env
+
+# Specific files to exclude
+services/backend/TRUSTMOCK_METADATA.txt
+apps/frontend/Pipfile
+apps/frontend/trustmock-frontend.iml
 
 # Coverage reports
 coverage/
